# archestra-mcp-init

./: README.md  package-lock.json  package.json
src/: index.ts
src/commands/: addTool.ts  generate.ts
src/templates/python/: cicd.ts  config.ts  docker.ts  docs.ts  index.ts  observability.ts  security.ts  server.ts  tools.ts
src/templates/typescript/: cicd.ts  config.ts  docker.ts  docs.ts  index.ts  observability.ts  security.ts  server.ts  tools.ts
src/utils/: fileGenerator.ts  fileGenerator.ts 
test-py-cicd/: .env.example  README.md  pyproject.toml
test-py-cicd/.github/workflows/: release.yml
test-py-cicd/src/: server.py
test-py-cicd/src/tools/: example_tool.py
test-py-docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
test-py-docker/src/: server.py
test-py-docker/src/observability/: logger.py
test-py-docker/src/security/: archestra_security.py
test-py-full/: README.md  pyproject.toml  requirements.txt
test-py-full/.github/workflows/: ci.yml
test-py-full/src/: server.py
test-py-server/: README.md  pyproject.toml
test-py-server/src/: server.py
test-ts-cicd/: ARCHESTRA.md  README.md  package.json
test-ts-cicd/src/: server.ts
test-ts-docker/: .env.example  ARCHESTRA.md  Dockerfile  README.md  docker-compose.yml  package.json
test-ts-docker/src/: server.ts
test-ts-full/: .dockerignore  ARCHESTRA.md  README.md  package.json  tsconfig.json
test-ts-full/src/: server.ts
test-ts-server/: .gitignore  ARCHESTRA.md  README.md  package.json
test-ts-server/src/: server.ts
(+20 files in other folders)
